Archive2/97/971da06b99038c/output
main.cpp:8:14: error: declaration of 'i' [-fpermissive]
   enum { i = 2 };
              ^
main.cpp:1:8: error: changes meaning of 'i' from '<anonymous enum> i' [-fpermissive]
 enum { i = 1 };
        ^
